# C_class_s2_TD_homework

./: CMakeLists.txt  README.md
ins/: task5.h
src/: main.c  task5.c
